--- a/en/home/index.html
+++ b/en/home/index.html
@@ -117,7 +117,7 @@ millenovecento44
 
                 
     <div class="container markdown top-pad">
-        <p><a href="mailto:info@millenovecento44.it">info@millenovecento44.it</a></p>
+        <p>soon&hellip;</p>
 
     </div>
     
