--- a/de/home/index.html
+++ b/de/home/index.html
@@ -117,7 +117,7 @@ millenovecento44
 
                 
     <div class="container markdown top-pad">
-        <p>bald&hellip;</p>
+        <p>demnächst&hellip;</p>
 
     </div>
     
