--- a/de/index.html
+++ b/de/index.html
@@ -65,7 +65,7 @@ millenovecento44
                         millenovecento44
                     </h1>
                     <div class="subtitle is-3 fade-in two">
-                        <p>bald&hellip;</p>
+                        <p>demnächst&hellip;</p>
 
                     </div>
                     
