--- a/home/index.html
+++ b/home/index.html
@@ -10,16 +10,16 @@
 <meta name="referrer" content="no-referrer">
 <meta name="description" content="Descrizione Website">
 <title>
-millenovecento44
+millenovecento44 - mille944
 </title>
 
 
 
-        <meta property="og:title" content="millenovecento44" />
+        <meta property="og:title" content="millenovecento44 - mille944" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Descrizione Website"/>
 <meta property="og:url" content="/home/"/>
-<meta property="og:site_name" content="millenovecento44"/>
+<meta property="og:site_name" content="mille944"/>
 
 
 
