--- a/404.html
+++ b/404.html
@@ -10,16 +10,16 @@
 <meta name="referrer" content="no-referrer">
 <meta name="description" content="Descrizione Website">
 <title>
-404 Page not found - millenovecento44
+404 Page not found - mille944
 </title>
 
 
 
-        <meta property="og:title" content="404 Page not found - millenovecento44" />
+        <meta property="og:title" content="404 Page not found - mille944" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Descrizione Website"/>
 <meta property="og:url" content="/404.html"/>
-<meta property="og:site_name" content="millenovecento44"/>
+<meta property="og:site_name" content="mille944"/>
 
 
 
@@ -117,7 +117,7 @@
 
                 
     <div class="container markdown top-pad">
-        Oops! Hai trovato un bug (in tal caso, <a href="mailto:info@millenovecento44.it">fammelo sapere</a>)  o ti sei inventato qualcosa. Questa pagina non esiste!
+        Oops! Hai trovato un bug (in tal caso, <a href="mailto:info@mille944.it">fammelo sapere</a>)  o ti sei inventato qualcosa. Questa pagina non esiste!
     </div>
 
 
