--- a/de/404.html
+++ b/de/404.html
@@ -10,16 +10,16 @@
 <meta name="referrer" content="no-referrer">
 <meta name="description" content="Beschreibung der Webseite">
 <title>
-404 Page not found - millenovecento44
+404 Page not found - mille944
 </title>
 
 
 
-        <meta property="og:title" content="404 Page not found - millenovecento44" />
+        <meta property="og:title" content="404 Page not found - mille944" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Beschreibung der Webseite"/>
 <meta property="og:url" content="/de/404.html"/>
-<meta property="og:site_name" content="millenovecento44"/>
+<meta property="og:site_name" content="mille944"/>
 
 
 
@@ -117,7 +117,7 @@
 
                 
     <div class="container markdown top-pad">
-        Oop! Endweder hast du einen Fehler gefunden (<a href="mailto:info@millenovecento44.it">dann kontaktiere mich bitte</a>)  oder du versucht etwas zu finden, was es nicht gibt. Diese Seite exisiert nicht!
+        Oop! Endweder hast du einen Fehler gefunden (<a href="mailto:info@mille944.it">dann kontaktiere mich bitte</a>)  oder du versucht etwas zu finden, was es nicht gibt. Diese Seite exisiert nicht!
     </div>
 
 
