--- a/de/index.html
+++ b/de/index.html
@@ -11,16 +11,16 @@
 <meta name="referrer" content="no-referrer">
 <meta name="description" content="Beschreibung der Webseite">
 <title>
-millenovecento44
+mille944
 </title>
 
-<link href="/de/index.xml" rel="alternate" type="application/rss+xml" title="millenovecento44" />
+<link href="/de/index.xml" rel="alternate" type="application/rss+xml" title="mille944" />
 
-        <meta property="og:title" content="millenovecento44" />
+        <meta property="og:title" content="mille944" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Beschreibung der Webseite"/>
 <meta property="og:url" content="/de/"/>
-<meta property="og:site_name" content="millenovecento44"/>
+<meta property="og:site_name" content="mille944"/>
 
 
 
@@ -73,7 +73,7 @@ millenovecento44
                     <div class="fade-in three">
                         <div class="social-icons">
     
-    <a href="mailto:info@millenovecento44.it" >
+    <a href="mailto:info@mille944.it" >
         <i class="fas fab fa-paper-plane"></i>
     </a>
     
