--- a/en/404.html
+++ b/en/404.html
@@ -10,16 +10,16 @@
 <meta name="referrer" content="no-referrer">
 <meta name="description" content="Website Description">
 <title>
-404 Page not found - millenovecento44
+404 Page not found - mille944
 </title>
 
 
 
-        <meta property="og:title" content="404 Page not found - millenovecento44" />
+        <meta property="og:title" content="404 Page not found - mille944" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Website Description"/>
 <meta property="og:url" content="/en/404.html"/>
-<meta property="og:site_name" content="millenovecento44"/>
+<meta property="og:site_name" content="mille944"/>
 
 
 
@@ -117,7 +117,7 @@
 
                 
     <div class="container markdown top-pad">
-        Oops! Either you&rsquo;ve found a bug (in which case, <a href="mailto:info@millenovecento44.it">please tell me</a>)  or you&rsquo;re just making things up. This page doesn&rsquo;t exist!
+        Oops! Either you&rsquo;ve found a bug (in which case, <a href="mailto:info@mille944.it">please tell me</a>)  or you&rsquo;re just making things up. This page doesn&rsquo;t exist!
     </div>
 
 
