--- a/es/404.html
+++ b/es/404.html
@@ -10,16 +10,16 @@
 <meta name="referrer" content="no-referrer">
 <meta name="description" content="Descripcion del sitio web">
 <title>
-404 Page not found - millenovecento44
+404 Page not found - mille944
 </title>
 
 
 
-        <meta property="og:title" content="404 Page not found - millenovecento44" />
+        <meta property="og:title" content="404 Page not found - mille944" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="Descripcion del sitio web"/>
 <meta property="og:url" content="/es/404.html"/>
-<meta property="og:site_name" content="millenovecento44"/>
+<meta property="og:site_name" content="mille944"/>
 
 
 
@@ -117,7 +117,7 @@
 
                 
     <div class="container markdown top-pad">
-        Oops! O bien encontraste un bug (en cuyo caso, <a href="mailto:info@millenovecento44.it">por favor avisame</a>)  o simplemente estas inventando cosas. Esta página no existe!
+        Oops! O bien encontraste un bug (en cuyo caso, <a href="mailto:info@mille944.it">por favor avisame</a>)  o simplemente estas inventando cosas. Esta página no existe!
     </div>
 
 
